RESOLVED FIXED164601
RenderElement::invalidateFlowThreadContainingBlockIncludingDescendants should be on RenderBlock.
https://bugs.webkit.org/show_bug.cgi?id=164601
Summary RenderElement::invalidateFlowThreadContainingBlockIncludingDescendants should...
alan
Reported 2016-11-10 10:58:37 PST
where it actually belongs.
Attachments
Patch (5.97 KB, patch)
2016-11-10 11:06 PST, alan
no flags
alan
Comment 1 2016-11-10 11:06:42 PST
WebKit Commit Bot
Comment 2 2016-11-10 11:47:57 PST
Comment on attachment 294389 [details] Patch Clearing flags on attachment: 294389 Committed r208555: <http://trac.webkit.org/changeset/208555>
WebKit Commit Bot
Comment 3 2016-11-10 11:48:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.